fix: More side padding on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -47,7 +47,7 @@
 /* Mobile */
 @media (max-width: 700px) {
   .main {
-    padding: 0 8px;
+    padding: 0 16px;
   }
 
   .center {
